# RayKin

./: CMakeLists.txt  CMakePresets.json  README.md  run.sh
assets/: URDF_example.xml  URDF_exampleLong.xml  URDF_exerc.xml
src/: main.cpp
src/core/: app.cpp  app.hpp
src/sim/: arm.cpp  arm.hpp  frame.cpp  frame.hpp  sim.cpp  sim.hpp
src/viz/: viz.cpp  viz.hpp
